# karapoke

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  wrangler.jsonc
.github/workflows/: ci.yml  pages.yml
scripts/: build-site.mjs
site/: CNAME  index.html  styles.css
src/: App.tsx  styles.css  useDragRegion.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
